--- a/src/components/BemVinda/BemVinda.module.css
+++ b/src/components/BemVinda/BemVinda.module.css
@@ -1,14 +1,12 @@
 .containerBemVinda {
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
     background-image: radial-gradient(circle, #eca79e, #fff);
     height: 100vh;
 }
 
 .imgBemVinda {
+    margin-right: 100px;
     height: 600px;
-    width: 600px;
+    width: 1000px;
     border-radius: 1000px;
 }
 
@@ -16,6 +14,7 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
+    margin-top: 100px;
 }
 
 h1 {
