--- a/src/components/BemVinda/BemVinda.module.css
+++ b/src/components/BemVinda/BemVinda.module.css
@@ -1,71 +1,40 @@
 .containerBemVinda {
     background-image: radial-gradient(circle, #eca79e, #fff);
     height: 100vh;
+    width: 100vw;
 }
 
-.imgBemVinda {
-    margin-right: 100px;
-    height: 600px;
-    width: 1000px;
-    border-radius: 1000px;
+.unhaimg {
+    border-radius: 50%;
+    height: 400px;
+    width: 250px;
 }
 
-.txtBtn {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    margin-top: 100px;
-}
-
-h1 {
+.txtBemVinda {
     font-family: var(--fontetitulo);
-    font-size: 150px;
 }
 
-p {
-    margin-top: 20px;
-    
-    font-family: var(--fontenavbar);
-    font-size: 20px;
-}
-
-.conhecerBtn {
-    margin-top: 40px;
-    background-color: black;
-    color: #eca79e;
-    text-align: center;
-    width: 160px;
-    height: 50px;
-    border: black;
-    border-radius: 5px;
+.h1CrisLuna {
+    font-size: 90px;
 }
 
 
 
-@media (max-width: 1400px) {
-    .imgBemVinda {
-        width: 300px;
-        height: 150px;
-        margin-right: 0px;
-    }
 
+
+
+@media (max-width: 768px) {
     .containerBemVinda {
-        height: 150vh;
-    }
-    
-    .elementos{
         display: flex;
-        flex-direction: column;
         justify-content: center;
         align-items: center;
     }
-    
-    
-    .txtBtn {
-        display: flex;
-        flex-direction: column;
-        margin-top: 100px;
-    }
-      
-}
 
+    .unhaimg {
+        visibility: hidden;
+    }
+
+    .h1CrisLuna {
+        font-size: 70px;
+    }
+}
